[gd_scene load_steps=23 format=3 uid="uid://dutgh7ygmpwtc"]

[ext_resource type="Script" path="res://scripts/characters/player.gd" id="1_lukb3"]
[ext_resource type="Script" path="res://scripts/characters/player_camera.gd" id="2_7i0ih"]
[ext_resource type="PackedScene" uid="uid://bqx666vmubd6c" path="res://nodes/char.tscn" id="2_85a4p"]
[ext_resource type="PackedScene" uid="uid://cgctj8nul8mba" path="res://nodes/aligner.tscn" id="3_3fw40"]
[ext_resource type="Script" path="res://scripts/modifiers/squishy_modifier.gd" id="4_hj4y3"]
[ext_resource type="Script" path="res://scripts/characters/state_machine/player_statemachine.gd" id="6_fra68"]
[ext_resource type="Script" path="res://scripts/characters/state_machine/slide_state.gd" id="7_dvkn3"]
[ext_resource type="Script" path="res://scripts/characters/state_machine/jump_state.gd" id="8_30wmf"]
[ext_resource type="Script" path="res://scripts/characters/state_machine/fall_state.gd" id="9_u257y"]
[ext_resource type="Script" path="res://scripts/characters/state_machine/landed_state.gd" id="10_v621h"]
[ext_resource type="Script" path="res://scripts/characters/state_machine/not_controlled_state.gd" id="11_8tylg"]
[ext_resource type="Script" path="res://scripts/characters/player_audio_manager.gd" id="12_tn8ov"]
[ext_resource type="AudioStream" uid="uid://cncw0ds1l6ajf" path="res://assets/audio/slide_loop.wav" id="13_r420e"]
[ext_resource type="AudioStream" uid="uid://b3kbdh86wc78v" path="res://assets/audio/music_02.wav" id="14_sm8fm"]
[ext_resource type="AudioStream" uid="uid://doxehunk2flxf" path="res://assets/audio/land.wav" id="15_fi53m"]
[ext_resource type="AudioStream" uid="uid://7wtqo48l1tcj" path="res://assets/audio/jump.wav" id="15_ojgg0"]

[sub_resource type="Curve" id="Curve_lyvwj"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_w0o3t"]
min_value = -1.0
max_value = 0.0
_data = [Vector2(0, -1), 0.0, 1.4, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hrgk7"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_m2tpf"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6rd2l"]

[sub_resource type="SphereMesh" id="SphereMesh_secvs"]

[node name="Player" type="CharacterBody3D" groups=["PlayerGroup"]]
physics_interpolation_mode = 1
collision_layer = 2
safe_margin = 0.06
script = ExtResource("1_lukb3")
turn_speed = 5.0
acceleration_curve = SubResource("Curve_lyvwj")
slowdown_curve = SubResource("Curve_w0o3t")
max_speed = 25
dash_boost = 25.0
dash_acceleration = 1.8
dash_boost_time = 3.0
snapping_distance = 0.6
mass = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01293, 0)
shape = SubResource("CapsuleShape3D_hrgk7")

[node name="SpringArm" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0.1, 0.1)
top_level = true
collision_mask = 0
shape = SubResource("SeparationRayShape3D_m2tpf")
spring_length = 8.0
margin = 2.0
script = ExtResource("2_7i0ih")
rotation_weight = 5.0
rotation_speed_mod = 0.5
camera_range_y_axis = Vector2(-90, -10)

[node name="Camera3D" type="Camera3D" parent="SpringArm"]
fov = 90.0

[node name="Visuals" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.142593, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visuals"]
visible = false
mesh = SubResource("CapsuleMesh_6rd2l")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.909478, -0.407264)
visible = false
mesh = SubResource("SphereMesh_secvs")
skeleton = NodePath("../..")

[node name="Char" parent="Visuals" instance=ExtResource("2_85a4p")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="Slope_check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.07115)
target_position = Vector3(0, -2, 0)
hit_back_faces = false

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, -0.5, 0)
hit_back_faces = false

[node name="Aligner" parent="." instance=ExtResource("3_3fw40")]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_fra68")

[node name="Slide" type="Node" parent="StateMachine" node_paths=PackedStringArray("jump_state", "fall_state")]
script = ExtResource("7_dvkn3")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "landed_state")]
script = ExtResource("8_30wmf")
jump_state_time = 0.2
jump_velocity = 5.0
fall_state = NodePath("../Fall")
landed_state = NodePath("../Landed")

[node name="Fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("landed_state")]
script = ExtResource("9_u257y")
landed_state = NodePath("../Landed")

[node name="Landed" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "slide_state")]
script = ExtResource("10_v621h")
landed_state_time = 0.1
fall_state = NodePath("../Fall")
slide_state = NodePath("../Slide")

[node name="Uncontrollable" type="Node" parent="StateMachine"]
script = ExtResource("11_8tylg")

[node name="Squishy_Modifier" type="Node" parent="."]
script = ExtResource("4_hj4y3")
speed_divider = 30.0

[node name="PlayerAudioManager" type="Node" parent="."]
script = ExtResource("12_tn8ov")

[node name="Slide_Loop" type="AudioStreamPlayer3D" parent="PlayerAudioManager"]
stream = ExtResource("13_r420e")
volume_db = 19.241

[node name="Music_Loop" type="AudioStreamPlayer3D" parent="PlayerAudioManager"]
stream = ExtResource("14_sm8fm")
volume_db = 10.0
autoplay = true

[node name="Jump" type="AudioStreamPlayer3D" parent="PlayerAudioManager"]
stream = ExtResource("15_ojgg0")
volume_db = 15.0
pitch_scale = 1.1

[node name="Land" type="AudioStreamPlayer3D" parent="PlayerAudioManager"]
stream = ExtResource("15_fi53m")
volume_db = 20.0
